# fuzzy_dl_owl2

./: .gitignore  .readthedocs.yaml  CONFIG.ini  README.md  __init__.py  build.py  pyproject.toml  setup.cfg  setup.py  test.ipynb
.github/workflows/: old_publish.yml  publish.yml  python-package.yml  python-publish.yml
benchmark/: CONFIG  README.md  benchmark_table.tex  create_latex_table.py  run_all.py  run_all_java.py  run_queries.py  test_run.py
benchmark/data/: AirSystem.txt  EMAP.obo.txt  FBbt_XP.txt  FuzzyWine.txt  GRO.txt  SIGKDD-EKAW.txt  Transportation.txt  amino-acid.txt  atom-common.txt  biochemistry-complex.txt  cancer_my.txt  cancer_ra.txt  chemical.txt  chemistry-complex.txt  cton.txt  earthrealm.txt  economy.txt  fmaOwlDlComponent_1_4_0.txt  galen-ians-full-doctored.txt  gene_ontology_edit.obo.txt  goslim.txt  heart.txt  human_activities.txt  legal-action.txt  legal-role.txt  lubm.txt  matchmaking.txt  mygrid-moby-service.txt  norm.txt  numerics.txt  ontology.txt  organic-compound-complex.txt  pathway.obo.txt  people.fd.txt  periodic-table-complex.txt  photography.txt  pizza.txt  po.txt  process.txt  property.txt  (+15 more)
benchmark/results/: benchmark_results.json  java_benchmark_results.json  java_skip.json  python_skip.json
dl-examples/: FuzzyWine.1.0.fdl  ex.fdl  example.fdl  matchmaking.fdl  test.fdl
docs/: requirements.txt
docs/source/: architecture.md  concepts.md  conf.py  fuzzy_dl_owl2.fuzzydl.assertion.rst  fuzzy_dl_owl2.fuzzydl.concept.concrete.fuzzy_number.rst  fuzzy_dl_owl2.fuzzydl.concept.concrete.rst  fuzzy_dl_owl2.fuzzydl.concept.interface.rst  fuzzy_dl_owl2.fuzzydl.concept.modified.rst  fuzzy_dl_owl2.fuzzydl.concept.rst  fuzzy_dl_owl2.fuzzydl.degree.rst  fuzzy_dl_owl2.fuzzydl.exception.rst  fuzzy_dl_owl2.fuzzydl.individual.rst  fuzzy_dl_owl2.fuzzydl.milp.rst  fuzzy_dl_owl2.fuzzydl.modifier.rst  fuzzy_dl_owl2.fuzzydl.parser.rst  fuzzy_dl_owl2.fuzzydl.query.defuzzify.rst  fuzzy_dl_owl2.fuzzydl.query.max.rst  fuzzy_dl_owl2.fuzzydl.query.min.rst  fuzzy_dl_owl2.fuzzydl.query.rst  fuzzy_dl_owl2.fuzzydl.restriction.rst  fuzzy_dl_owl2.fuzzydl.rst  fuzzy_dl_owl2.fuzzydl.util.rst  fuzzy_dl_owl2.fuzzyowl2.owl_types.rst  fuzzy_dl_owl2.fuzzyowl2.parser.rst  fuzzy_dl_owl2.fuzzyowl2.rst  fuzzy_dl_owl2.fuzzyowl2.util.rst  fuzzy_dl_owl2.rst  grammar.md  index.rst  install_and_config.md  main.md  modifiers_degrees.md  modules.rst  new_grammar.md  queries.md  usage.md  xml.md
examples/TestSuite/: absorption1.txt  absorption2.txt  aggregation7.txt  all3.txt  all4.txt  and2.txt  and4.txt  blockingDynamic1.txt  blockingLoop2.txt  blockingLoop3.txt  blockingLoop4.txt  blockingLoop5.txt  blockingPairwise1.txt  blockingPairwise2.txt  blockingPairwise4.txt  blockingSet.txt  datatype10.txt  datatype2.txt  datatype3.txt  fcd1.txt  fcd3.txt  fcd4.txt  functional2.txt  functional4.txt  functional6.txt  fuzzyNumber2.txt  fuzzyNumber5.txt  hasValue1.txt  hasValue12.txt  hasValue13.txt  hasValue14.txt  hasValue20.txt  hasValue21.txt  hasValue22.txt  hasValue24.txt  hasValue26.txt  hasValue3.txt  hasValue4.txt  hasValue6.txt  hasValue8.txt  (+25 more)
examples/conversion_dl/: concepts_and_individuals.txt  datatypes.txt  roles.txt
examples/conversion_owl/: concepts.ttl  datatypes.ttl  individuals.ttl  roles.ttl
fuzzy_dl_owl2/: __init__.py
fuzzy_dl_owl2/fuzzydl/: __init__.py  classification_node.py  concept_equivalence.py  concrete_feature.py  domain_axiom.py  feature_function.py  fuzzydl_to_owl2.py  general_concept_inclusion.py  knowledge_base.py  label.py  primitive_concept_definition.py  range_axiom.py  relation.py  role_parent_with_degree.py
fuzzy_dl_owl2/fuzzyowl2/: fuzzyowl2.py  fuzzyowl2_to_fuzzydl.py
fuzzy_dl_owl2/test/: __init__.py  parser_interface.py  test_absorption.py  test_aggregation.py  test_all.py  test_and.py  test_blocking.py  test_datatype.py  test_disjoint.py  test_functional.py  test_fuzzy_concrete_domain.py  test_fuzzy_number.py  test_implies.py  test_implies_role.py  test_inconsistency.py  test_instance.py  test_inverse.py  test_modifier.py  test_not.py  test_or.py  test_reflexive.py  test_related.py  test_rough_sets.py  test_sat.py  test_self.py  test_show_statement.py  test_some.py  test_subsumption.py  test_suite.py  test_symmetric.py  test_tbox.py  test_threshold_concept.py  test_transitive.py  test_truth_constant.py  test_weighted_concept.py  test_weighted_sum.py
fuzzy_reasoner/: app.py
fuzzy_reasoner/fuzzydl/: concept_equivalence.py  concrete_feature.py  domain_axiom.py  feature_function.py  fuzzydl_to_owl2.py  fuzzydl_to_owl2_java.py  general_concept_inclusion.py  knowledge_base.py  label.py  primitive_concept_definition.py  range_axiom.py  relation.py
fuzzy_reasoner/fuzzyowl2/: fuzzyowl2.py  fuzzyowl2_java.py  fuzzyowl2_to_fuzzydl.py  fuzzyowl2_to_fuzzydl_java.py
results/: owl.fdl
test/: CONFIG.ini  __init__.py  parser_interface.py  test_absorption.py  test_aggregation.py  test_all.py  test_and.py  test_blocking.py  test_conversion_dl_to_owl2.py  test_conversion_owl2_to_dl.py  test_conversion_roundtrip.py  test_datatype.py  test_disjoint.py  test_functional.py  test_fuzzy_concrete_domain.py  test_fuzzy_number.py  test_implies.py  test_implies_role.py  test_inconsistency.py  test_instance.py  test_inverse.py  test_modifier.py  test_not.py  test_or.py  test_reflexive.py  test_related.py  test_rough_sets.py  test_sat.py  test_self.py  test_show_statement.py  test_some.py  test_subsumption.py  test_suite.py  test_symmetric.py  test_tbox.py  test_threshold_concept.py  test_transitive.py  test_truth_constant.py  test_weighted_concept.py  test_weighted_sum.py  (+1 more)
(+748 files in other folders)
