[tool.poetry]
name = "fuzzy-dl-owl2"
version = "1.0.18"
description = "A python porting of the Fuzzy Description Language (see https://www.umbertostraccia.it/cs/software/fuzzyDL/fuzzyDL.html) and the Fuzzy OWL 2 framework (see https://www.umbertostraccia.it/cs/software/FuzzyOWL/index.html)."
license = "CC-BY-SA-4.0"
readme = "README.md"
repository = "https://github.com/giuseppefilippone/fuzzy_dl_owl2"
documentation = "https://fuzzy-dl-owl2.readthedocs.io/en/latest/"
authors = ["Giuseppe Filippone <filipponegiuseppe94@gmail.com>"]

# Force-include Cython-compiled extensions in the wheel even though
# `*.so` is in .gitignore (poetry-core honors .gitignore by default).
include = [
    { path = "fuzzy_dl_owl2/**/*.so", format = "wheel" },
    { path = "fuzzy_dl_owl2/**/*.pyd", format = "wheel" },
]

[tool.poetry.dependencies]
python = ">=3.11, <4.0"
rdflib = "^7.1.4"
networkx = "^3.3"
numpy = "^2.2"
pyowl2 = "^1.0.8"
pyparsing = "^3.2.3"
sortedcontainers = "^2.4.0"
trycast = "^1.2.0"
defusedxml = "^0.7.1"
python-dotenv = "^1.0"
cffi        = "^1.17.1"
cython      = "^3.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
flake8 = "^7.1"
pytest-cov = "^5.0"

# Compile the fast recursive-descent parser
# (fuzzy_dl_owl2.fuzzydl.parser.dl_parser_fast) into a native extension
# whenever the wheel is built (pip install ., poetry build, etc.).
[tool.poetry.build]
script = "build.py"
generate-setup-file = false


[[tool.poetry.source]]
name = "pypi"
priority = "primary"

# Fallback mirror. Aliyun lags official PyPI by hours/days, so keep it
# supplemental — freshly released deps (e.g. pyowl2) resolve from PyPI first.
[[tool.poetry.source]]
name = "pypi-mirror"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "supplemental"

[build-system]
# build.py imports cffi (FFI), Cython.Build, and setuptools; all three must
# be present at build time so the cythonize step and the _fdl_lexer CFFI
# wrapper compile during `pip install .` / `poetry build`. pyparsing is
# needed because the lexer generator (tokenizer/generate.py) loads
# util/constants.py, which imports it at module level.
requires = [
    "poetry-core>=1.0.0",
    "cython>=3.0",
    "setuptools>=70.0",
    "cffi>=1.16",
    "pyparsing>=3.2",
]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = [
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "pip install poetry && poetry build"
