[metadata]
name = fuzzy-reasoner
version = 1.0.0
author = Giuseppe Filippone
author_email = giuseppe.filippone01@unipa.it
description = A python porting of the Fuzzy Description Language (see https://www.umbertostraccia.it/cs/software/fuzzyDL/fuzzyDL.html) and the Fuzzy OWL 2 framework (see https://www.umbertostraccia.it/cs/software/FuzzyOWL/index.html).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giuseppefilippone/fuzzy_reasoner
license = CC-BY-SA-4.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons Attribution-ShareAlike 4.0 International
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests

[options.package_data]
* = *.md

[options.packages.find]
where = .
exclude =
    tests*