[metadata]
name = fuzzy-dl-owl2
version = 1.0.11
author = Giuseppe Filippone
author_email = filipponegiuseppe94@gmail.com
description = A python porting of the Fuzzy Description Language (see https://www.umbertostraccia.it/cs/software/fuzzyDL/fuzzyDL.html) and the Fuzzy OWL 2 framework (see https://www.umbertostraccia.it/cs/software/FuzzyOWL/index.html).
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/giuseppefilippone/fuzzy_dl_owl2
license = CC-BY-SA-4.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Creative Commons Attribution-ShareAlike 4.0 International
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.11
install_requires =
    requests

[options.package_data]
* = *.md

[options.packages.find]
where = .
exclude =
    tests*

[project_urls]
Documentation = https://fuzzy-dl-owl2.readthedocs.io/en/latest/